Fix [#32629] Checking "Invert Zoom Direction" doesn't change zoom in camera view.